# exrates

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
exrates/: __init__.py  __main__.py  __version__.py  exrates
